--- a/create-react-express/package.json
+++ b/create-react-express/package.json
@@ -19,7 +19,9 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.15.4",
+    "mongoose": "^5.1.3",
     "react-router-dom": "^4.2.0"
   }
 }
