--- a/create-react-express/package.json
+++ b/create-react-express/package.json
@@ -22,6 +22,15 @@
     "body-parser": "^1.18.3",
     "express": "^4.15.4",
     "mongoose": "^5.1.3",
-    "react-router-dom": "^4.2.0"
+    "react-router-dom": "^4.2.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "express-messages": "^1.0.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "express-sessions": "^1.0.6",
+    "express-validator": "^5.2.0"
   }
 }
