--- a/create-react-express/client/package.json
+++ b/create-react-express/client/package.json
@@ -5,6 +5,8 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "cloudinary": "^1.11.0",
+    "cloudinary-react": "^1.0.6",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
