--- a/create-react-express/client/package.json
+++ b/create-react-express/client/package.json
@@ -7,10 +7,14 @@
     "axios": "^0.18.0",
     "cloudinary": "^1.11.0",
     "cloudinary-react": "^1.0.6",
-    "react": "^16.0.0",
+    "react": "^16.4.0",
+    "react-cloudinary": "^0.4.1",
     "react-dom": "^16.0.0",
+    "react-dropzone": "^4.2.11",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "superagent": "^3.8.3",
+    "webpack": "^4.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
