--- a/create-react-express/package.json
+++ b/create-react-express/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "node server.js",
     "client": "cd client && npm run start",
-    "start": "./node_modules/.bin/concurrently \"./node_modules/.bin/nodemon\" \"npm run client\"",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "build": "cd client && npm run build",
     "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,18 +19,22 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "ejs": "^2.6.1",
     "express": "^4.15.4",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.15.6",
+    "express-sessions": "^1.0.6",
+    "express-validator": "^5.2.0",
     "mongoose": "^5.1.3",
-    "react-router-dom": "^4.2.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
-    "express-messages": "^1.0.1",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.3",
-    "express-sessions": "^1.0.6",
-    "express-validator": "^5.2.0"
+    "react-router-dom": "^4.2.0"
   }
 }
