--- a/create-react-express/package.json
+++ b/create-react-express/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
     "ejs": "^2.6.1",
     "express": "^4.15.4",
