--- a/create-react-express/client/package.json
+++ b/create-react-express/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "cloudinary": "^1.11.0",
     "cloudinary-react": "^1.0.6",
+    "moment": "^2.22.2",
     "react": "^16.4.0",
     "react-cloudinary": "^0.4.1",
     "react-dom": "^16.0.0",
